initial low level registering
This commit adds a new example project to show how to use the low-
level registering API.

The low level registering API can be used to register classes to
Godot without needing to use macros. Some optional macros have been
added for convenience anyway.

Missing for now are property and signal registering.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ members = [
     "geom",
     "test",
     "examples/hello_world",
-    "examples/misc_mesh_playground"
+    "examples/misc_mesh_playground",
+    "examples/low_level_registering",
 ]
