--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "gdnative-sys"
-version = "0.2.0"
+authors = ["The godot-rust developers"]
+description = "Generated bindings to the Godot game engine's gdnative core types (See the gdnative crate)."
+documentation = "https://docs.rs/crate/gdnative-sys"
+repository = "https://github.com/GodotNativeTools/godot-rust"
+version = "0.3.0"
 build = "build.rs"
+license = "MIT"
 workspace = ".."
 
 [dependencies]
