--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ members = [
     "geom",
     "test",
     "examples/hello_world",
-    "examples/misc_mesh_playground",
-    "examples/low_level_registering",
+    "examples/spinning_cube",
+    "examples/manually_registered",
 ]
