Move the bindings generator into a dedicated crate and clean it up.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "gdnative",
     "geom",
     "test",
+    "bindings_generator",
     "examples/hello_world",
     "examples/spinning_cube",
     "examples/manually_registered",
