--- a/gdnative/Cargo.toml
+++ b/gdnative/Cargo.toml
@@ -18,7 +18,4 @@ libc = "0.2"
 bitflags = "1.0"
 
 [build-dependencies]
-serde = "1.0.15"
-serde_json = "1.0.3"
-serde_derive = "1.0.15"
-heck = "0.3.0"
+gdnative_bindings_generator = { path = "../bindings_generator" }
