Split the bindings into smaller crates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,17 @@
 members = [
     "sys",
     "gdnative",
+    "core",
+    "graphics",
+    "animation",
+    "audio",
+    "video",
+    "visual_script",
+    "editor",
+    "input",
+    "network",
+    "arvr",
+    "ui",
     "geom",
     "test",
     "bindings_generator",
