--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "gdnative_graphics"
+name = "gdnative_physics"
 authors = ["The godot-rust developers"]
-description = "The Godot game engine's gdnative graphics bindings."
+description = "The Godot game engine's gdnative physics bindings."
 documentation = "https://docs.rs/crate/gdnative"
 repository = "https://github.com/GodotNativeTools/godot-rust"
 version = "0.4.0"
