--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -12,11 +12,9 @@ workspace = ".."
 gd_test = []
 
 [dependencies]
-gdnative_core = { path = "../core", version = "0.4.0" }
+gdnative_common = { path = "../common", version = "0.4.0" }
 gdnative_ui = { path = "../ui", version = "0.4.0" }
 gdnative_animation = { path = "../animation", version = "0.4.0" }
-libc = "0.2"
-bitflags = "1.0"
 
 
 [build-dependencies]
