--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "gdnative_input"
+name = "gdnative_common"
 authors = ["The godot-rust developers"]
-description = "The Godot game engine's gdnative input bindings."
+description = "The Godot game engine's gdnative common generated class bindings."
 documentation = "https://docs.rs/crate/gdnative"
 repository = "https://github.com/GodotNativeTools/godot-rust"
 version = "0.4.0"
@@ -12,7 +12,9 @@ workspace = ".."
 gd_test = []
 
 [dependencies]
-gdnative_common = { path = "../common", version = "0.4.0" }
+gdnative_core = { path = "../core", version = "0.4.0" }
+libc = "0.2"
+bitflags = "1.0"
 
 [build-dependencies]
 gdnative_bindings_generator = { path = "../bindings_generator" }
