--- a/gdnative/Cargo.toml
+++ b/gdnative/Cargo.toml
@@ -9,23 +9,34 @@ license = "MIT"
 workspace = ".."
 
 [features]
-gd_test = []
+gd_test = ["gdnative_core/gd_test"]
+
+graphics = ["gdnative_graphics"]
+physics = ["gdnative_physics"]
+audio = ["gdnative_audio"]
+video = ["gdnative_video"]
+animation = ["gdnative_animation"]
+network = ["gdnative_network"]
+editor = ["gdnative_editor", "ui", "animation"]
+visual_script = ["gdnative_visual_script"]
+input = ["gdnative_input"]
+ui = ["gdnative_ui", "video"]
+arvr = ["gdnative_arvr"]
 
 [dependencies]
 gdnative_core = { path = "../core", version = "0.4.0" }
-gdnative_graphics = { path = "../graphics", version = "0.4.0" }
-gdnative_physics = { path = "../physics", version = "0.4.0" }
-gdnative_audio = { path = "../audio", version = "0.4.0" }
-gdnative_video = { path = "../video", version = "0.4.0" }
-gdnative_animation = { path = "../animation", version = "0.4.0" }
-gdnative_network = { path = "../network", version = "0.4.0" }
-gdnative_editor = { path = "../editor", version = "0.4.0" }
-gdnative_visual_script = { path = "../visual_script", version = "0.4.0" }
-gdnative_input = { path = "../input", version = "0.4.0" }
-gdnative_ui = { path = "../ui", version = "0.4.0" }
-gdnative_arvr = { path = "../arvr", version = "0.4.0" }
-libc = "0.2"
-bitflags = "1.0"
+gdnative_common = { path = "../common", version = "0.4.0" }
+gdnative_graphics = { optional = true, path = "../graphics", version = "0.4.0" }
+gdnative_physics = { optional = true, path = "../physics", version = "0.4.0" }
+gdnative_audio = { optional = true, path = "../audio", version = "0.4.0" }
+gdnative_video = { optional = true, path = "../video", version = "0.4.0" }
+gdnative_animation = { optional = true, path = "../animation", version = "0.4.0" }
+gdnative_network = { optional = true, path = "../network", version = "0.4.0" }
+gdnative_editor = { optional = true, path = "../editor", version = "0.4.0" }
+gdnative_visual_script = { optional = true, path = "../visual_script", version = "0.4.0" }
+gdnative_input = { optional = true, path = "../input", version = "0.4.0" }
+gdnative_ui = { optional = true, path = "../ui", version = "0.4.0" }
+gdnative_arvr = { optional = true, path = "../arvr", version = "0.4.0" }
 
 [build-dependencies]
 gdnative_bindings_generator = { path = "../bindings_generator" }
