--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -12,10 +12,8 @@ workspace = ".."
 gd_test = []
 
 [dependencies]
-gdnative_core = { path = "../core", version = "0.4.0" }
+gdnative_common = { path = "../common", version = "0.4.0" }
 gdnative_video = { path = "../video", version = "0.4.0" }
-libc = "0.2"
-bitflags = "1.0"
 
 [build-dependencies]
 gdnative_bindings_generator = { path = "../bindings_generator" }
