--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -18,4 +18,4 @@ gdnative_animation = { path = "../animation", version = "0.5.0" }
 
 
 [build-dependencies]
-gdnative_bindings_generator = { path = "../bindings_generator" }
+gdnative_bindings_generator = { path = "../bindings_generator", version = "0.1.0" }
