--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gdnative_common"
+name = "gdnative-common"
 authors = ["The godot-rust developers"]
 description = "The Godot game engine's gdnative common generated class bindings."
 documentation = "https://docs.rs/crate/gdnative"
@@ -12,7 +12,7 @@ workspace = ".."
 gd_test = []
 
 [dependencies]
-gdnative_core = { path = "../core", version = "0.5.0" }
+gdnative-core = { path = "../core", version = "0.5.0" }
 libc = "0.2"
 bitflags = "1.0"
 
