--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gdnative_ui"
+name = "gdnative-ui"
 authors = ["The godot-rust developers"]
 description = "The Godot game engine's gdnative UI bindings."
 documentation = "https://docs.rs/crate/gdnative"
@@ -12,8 +12,8 @@ workspace = ".."
 gd_test = []
 
 [dependencies]
-gdnative_common = { path = "../common", version = "0.5.0" }
-gdnative_video = { path = "../video", version = "0.5.0" }
+gdnative-common = { path = "../common", version = "0.5.0" }
+gdnative-video = { path = "../video", version = "0.5.0" }
 
 [build-dependencies]
 gdnative_bindings_generator = { path = "../bindings_generator", version = "0.2.0" }
