--- a/gdnative/Cargo.toml
+++ b/gdnative/Cargo.toml
@@ -24,6 +24,7 @@ ui = ["gdnative-ui", "video"]
 arvr = ["gdnative-arvr"]
 
 [dependencies]
+gdnative-derive = { path = "../derive", version = "0.5.0" }
 gdnative-core = { path = "../core", version = "0.5.0" }
 gdnative-common = { path = "../common", version = "0.5.0" }
 gdnative-graphics = { optional = true, path = "../graphics", version = "0.5.0" }
