removed manually_registered example, added derive macro

--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -13,5 +13,5 @@ workspace = ".."
 proc-macro = true
 
 [dependencies]
-syn = { version = "0.15.29", features = ["full"] }
+syn = { version = "0.15.29", features = ["full", "extra-traits"] }
 quote = "0.6.11"
