update to 2018 edition
This also fixes deprecation warnings from bindgen in the -sys crate.

--- a/bindings_generator/Cargo.toml
+++ b/bindings_generator/Cargo.toml
@@ -5,6 +5,7 @@ repository = "https://github.com/GodotNativeTools/godot-rust"
 license = "MIT"
 version = "0.2.0"
 authors = ["The godot-rust developers"]
+edition = "2018"
 
 [dependencies]
 serde = "1.0.15"
