--- a/gdnative/Cargo.toml
+++ b/gdnative/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/GodotNativeTools/godot-rust"
 version = "0.5.0"
 license = "MIT"
 workspace = ".."
+edition = "2018"
 
 [features]
 gd_test = ["gdnative-core/gd_test"]
