--- a/gdnative-bindings/Cargo.toml
+++ b/gdnative-bindings/Cargo.toml
@@ -5,4 +5,10 @@ authors = ["karroffel <therzog@mail.de>"]
 edition = "2018"
 
 [dependencies]
+gdnative-sys = { path = "../gdnative-sys", version = "0.5.0" }
+gdnative-core = { path = "../gdnative-core", version = "0.5.0" }
+libc = "0.2"
+bitflags = "1.0"
+
+[build-dependencies]
 gdnative_bindings_generator = { path = "../bindings_generator" }
