--- a/gdnative/Cargo.toml
+++ b/gdnative/Cargo.toml
@@ -10,13 +10,15 @@ workspace = ".."
 edition = "2018"
 
 [features]
+default = ["bindings"]
+
 gd_test = ["gdnative-core/gd_test"]
+bindings = ["gdnative-bindings"]
 
 [dependencies]
 gdnative-derive = { path = "../gdnative-derive", version = "0.5.0" }
 gdnative-core = { path = "../gdnative-core", version = "0.5.0" }
-
-# gdnative-arvr = { optional = true, path = "../arvr", version = "0.5.0" }
+gdnative-bindings = { optional = true, path = "../gdnative-bindings" }
 
 [package.metadata.docs.rs]
 all-features = true
