Add new example scene_create
- Creates child scene
- Has UI panel with Create and Remove buttons
- Demonstrates communication into and out of rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ members = [
     "bindings_generator",
     "examples/hello_world",
     "examples/spinning_cube",
+    "examples/scene_create",
 ]
