--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -17,6 +17,7 @@ gdnative-sys = { path = "../gdnative-sys", version = "0.5.0" }
 libc = "0.2"
 bitflags = "1.0"
 euclid = "0.19.6"
+parking_lot = "0.9.0"
 
 [build-dependencies]
 gdnative_bindings_generator = { path = "../bindings_generator", version = "0.2.0" }
