--- a/gdnative-derive/Cargo.toml
+++ b/gdnative-derive/Cargo.toml
@@ -15,3 +15,4 @@ proc-macro = true
 [dependencies]
 syn = { version = "0.15.29", features = ["full", "extra-traits"] }
 quote = "0.6.11"
+proc-macro2 = "^0.4.4"
