--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: rust
 
+cache: cargo
 
 matrix:
 
   allow_failures:
    - rust: nightly
+  fast_finish: true
 
   include:
     - name: cargo fmt
