updated version numbers in all crates

--- a/examples/hello_world/Cargo.toml
+++ b/examples/hello_world/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hello_world"
 version = "0.1.0"
 authors = ["karroffel <therzog@mail.de>"]
+publish = false
 
 [lib]
 crate-type = ["cdylib"]
