--- a/examples/spinning_cube/Cargo.toml
+++ b/examples/spinning_cube/Cargo.toml
@@ -2,6 +2,7 @@
 name = "spinning_cube"
 version = "0.1.0"
 authors = ["karroffel <therzog@mail.de>"]
+publish = false
 
 [lib]
 crate-type = ["cdylib"]
