--- a/gdnative-bindings/Cargo.toml
+++ b/gdnative-bindings/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "gdnative-bindings"
-version = "0.1.0"
+version = "0.7.0"
 authors = ["karroffel <therzog@mail.de>"]
 edition = "2018"
 
 [dependencies]
-gdnative-sys = { path = "../gdnative-sys", version = "0.5.0" }
-gdnative-core = { path = "../gdnative-core", version = "0.5.0" }
+gdnative-sys = { path = "../gdnative-sys", version = "0.7.0" }
+gdnative-core = { path = "../gdnative-core", version = "0.7.0" }
 libc = "0.2"
 bitflags = "1.2"
 
 [build-dependencies]
-gdnative_bindings_generator = { path = "../bindings_generator" }
+gdnative_bindings_generator = { path = "../bindings_generator", version = "0.7.0" }
