changed authors field in Cargo.toml to be all the same

--- a/examples/scene_create/Cargo.toml
+++ b/examples/scene_create/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "scene_create"
 version = "0.1.0"
-authors = ["tom.leys <tom@crump-leys.com>", "karroffel <therzog@mail.de>"]
+authors = ["The godot-rust developers"]
 publish = false
 
 [lib]
