--- a/gdnative-bindings/Cargo.toml
+++ b/gdnative-bindings/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gdnative-bindings"
 version = "0.7.0"
-authors = ["karroffel <therzog@mail.de>"]
+authors = ["The godot-rust developers"]
 edition = "2018"
 
 [dependencies]
