--- a/gdnative-sys/Cargo.toml
+++ b/gdnative-sys/Cargo.toml
@@ -15,5 +15,9 @@ libc = "0.2"
 
 [build-dependencies]
 bindgen = { version = "0.51.1", default-features = false }
-serde_json = "1.0"
+lazy_static = "1.4.0"
+proc-macro2 = "1.0.6"
+quote = "1.0.2"
+regex = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
