--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-
-
 [workspace]
 members = [
     "gdnative",
@@ -12,5 +10,6 @@ members = [
     "examples/hello_world",
     "examples/spinning_cube",
     "examples/scene_create",
-    "examples/signals"
+    "examples/signals",
+    "examples/dodge_the_creeps"
 ]
