--- a/gdnative/Cargo.toml
+++ b/gdnative/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/godot-rust/godot-rust"
 version = "0.8.1"
 license = "MIT"
 workspace = ".."
+readme = "../README.md"
 edition = "2018"
 
 [features]
