Implement unified generic typed array
This adds `TypedArray<T>`, a generic type that can represent all typed arrays
in the GDNative C API. This is accomplished by control inversion into a sealed
trait implemented for all typed array elements.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ members = [
     "examples/spinning_cube",
     "examples/scene_create",
     "examples/signals",
-    "examples/dodge_the_creeps"
+    "examples/dodge_the_creeps",
+    "impl/proc_macros"
 ]
