--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -18,6 +18,7 @@ libc = "0.2"
 bitflags = "1.2"
 euclid = "0.20.1"
 parking_lot = "0.9.0"
+gdnative-impl-proc-macros = { path = "../impl/proc_macros", version = "=0.9.0" }
 
 # Used for float comparisons in godot tests
 approx = { version = "0.3.2", optional = true }
