--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -30,3 +30,4 @@ parking_lot = { version = "0.9.0", optional = true }
 
 [build-dependencies]
 gdnative_bindings_generator = { path = "../bindings_generator", version = "0.8.1" }
+quote = "1.0.2"
