reworked method implementation generation
closes #422
closes #412

Instead of generating one "method implementation" (which does the call
to Godot) for each method for each class, now "icalls" (internal-calls,
internal refering to Godot) are generated and shared between multiple
methods.

For reference, before this change roughly 8100 method impls were
generated. With this change only 692 icalls are generated.

For different types of icalls there are different calling conventions.
These are:
 - ptrcall, using a direct (but very unsafe and weakly typed) way to
   call methods. The fastest, but does have some compatibility issues.
 - varargs_call, allows the use of varargs and always returns Variant.
   Very good compatilibilty but is specialised to work with varargs only.
   Slower to perform than a ptrcall.
 - varcall, uses an interface that exclusively uses Variants for arguments
   and return values. Very good compatibility but slower to perform than
   ptrcalls.

--- a/gdnative-bindings/Cargo.toml
+++ b/gdnative-bindings/Cargo.toml
@@ -19,4 +19,5 @@ libc = "0.2"
 bitflags = "1.2"
 
 [build-dependencies]
+heck = "0.3.0"
 gdnative_bindings_generator = { path = "../bindings_generator", version = "0.8.1" }
