add feature flag to output class bindings one file per class
The flag is disabled by default.
This is nice for debugging the bindings themselves.

--- a/gdnative-bindings/Cargo.toml
+++ b/gdnative-bindings/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 
 [features]
 formatted = []
+one_class_one_file = []
 
 [dependencies]
 gdnative-sys = { path = "../gdnative-sys", version = "0.8.1" }
