--- a/examples/scene_create/Cargo.toml
+++ b/examples/scene_create/Cargo.toml
@@ -3,6 +3,7 @@ name = "scene_create"
 version = "0.1.0"
 authors = ["The godot-rust developers"]
 publish = false
+edition = "2018"
 
 [lib]
 crate-type = ["cdylib"]
