--- a/examples/spinning_cube/Cargo.toml
+++ b/examples/spinning_cube/Cargo.toml
@@ -3,6 +3,7 @@ name = "spinning_cube"
 version = "0.1.0"
 authors = ["The godot-rust developers"]
 publish = false
+edition = "2018"
 
 [lib]
 crate-type = ["cdylib"]
