--- a/bindings_generator/Cargo.toml
+++ b/bindings_generator/Cargo.toml
@@ -5,7 +5,7 @@ description = "Generates bindings for the Godot engine's gdnative classes from a
 documentation = "https://docs.rs/crate/gdnative_bindings_generator"
 repository = "https://github.com/godot-rust/godot-rust"
 license = "MIT"
-version = "0.8.1"
+version = "0.9.0-preview.0"
 workspace = ".."
 edition = "2018"
 
