--- a/gdnative-bindings/Cargo.toml
+++ b/gdnative-bindings/Cargo.toml
@@ -4,7 +4,7 @@ authors = ["The godot-rust developers"]
 description = "The Godot game engine's automatcally generated bindings to Godot classes."
 documentation = "https://docs.rs/crate/gdnative-bindings"
 repository = "https://github.com/godot-rust/godot-rust"
-version = "0.8.1"
+version = "0.9.0-preview.0"
 license = "MIT"
 workspace = ".."
 edition = "2018"
@@ -14,11 +14,11 @@ formatted = []
 one_class_one_file = []
 
 [dependencies]
-gdnative-sys = { path = "../gdnative-sys", version = "0.8.1" }
-gdnative-core = { path = "../gdnative-core", version = "0.8.1" }
+gdnative-sys = { path = "../gdnative-sys", version = "0.9.0-preview.0" }
+gdnative-core = { path = "../gdnative-core", version = "=0.9.0-preview.0" }
 libc = "0.2"
 bitflags = "1.2"
 
 [build-dependencies]
 heck = "0.3.0"
-gdnative_bindings_generator = { path = "../bindings_generator", version = "0.8.1" }
+gdnative_bindings_generator = { path = "../bindings_generator", version = "=0.9.0-preview.0" }
