--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -4,7 +4,7 @@ authors = ["The godot-rust developers"]
 description = "The Godot game engine's gdnative core bindings."
 documentation = "https://docs.rs/crate/gdnative-core"
 repository = "https://github.com/godot-rust/godot-rust"
-version = "0.8.1"
+version = "0.9.0-preview.0"
 license = "MIT"
 workspace = ".."
 edition = "2018"
@@ -15,12 +15,12 @@ gd_test = ["approx"]
 nativescript = ["bitflags", "parking_lot"]
 
 [dependencies]
-gdnative-sys = { path = "../gdnative-sys", version = "0.8.1" }
+gdnative-sys = { path = "../gdnative-sys", version = "0.9.0-preview.0" }
 libc = "0.2"
 
 euclid = "0.20.13"
 
-gdnative-impl-proc-macros = { path = "../impl/proc_macros", version = "=0.9.0" }
+gdnative-impl-proc-macros = { path = "../impl/proc_macros", version = "=0.9.0-preview.0" }
 
 # Used for float comparisons in godot tests
 approx = { version = "0.3.2", optional = true }
