--- a/gdnative-sys/Cargo.toml
+++ b/gdnative-sys/Cargo.toml
@@ -4,7 +4,7 @@ authors = ["The godot-rust developers"]
 description = "Generated bindings to the Godot game engine's gdnative core types (See the gdnative crate)."
 documentation = "https://docs.rs/crate/gdnative-sys"
 repository = "https://github.com/godot-rust/godot-rust"
-version = "0.8.1"
+version = "0.9.0-preview.0"
 build = "build.rs"
 license = "MIT"
 workspace = ".."
