--- a/impl/proc_macros/Cargo.toml
+++ b/impl/proc_macros/Cargo.toml
@@ -3,7 +3,7 @@ name = "gdnative-impl-proc-macros"
 authors = ["The godot-rust developers"]
 description = "Internal dependency of the gdnative bindings."
 repository = "https://github.com/godot-rust/godot-rust"
-version = "0.9.0"
+version = "0.9.0-preview.0"
 license = "MIT"
 workspace = "../.."
 edition = "2018"
