Add example with usage of resources

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "examples/scene_create",
     "examples/signals",
     "examples/dodge_the_creeps",
+    "examples/resource",
     "impl/proc_macros"
 ]
 
