--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -11,19 +11,16 @@ edition = "2018"
 
 [features]
 default = ["nativescript"]
-gd_test = ["approx"]
+gd_test = []
 nativescript = ["bitflags", "parking_lot"]
 
 [dependencies]
 gdnative-sys = { path = "../gdnative-sys", version = "0.9.0-preview.0" }
 libc = "0.2"
-
+approx = "0.3.2"
 euclid = "0.20.13"
 
 gdnative-impl-proc-macros = { path = "../impl/proc_macros", version = "=0.9.0-preview.0" }
-
-# Used for float comparisons in godot tests
-approx = { version = "0.3.2", optional = true }
 
 bitflags = { version = "1.2", optional = true }
 parking_lot = { version = "0.9.0", optional = true }
