Prepare for release 0.9
After almost a month of preview, the new API seems solid enough for a proper
release.

- Bumped all version numbers to 0.9.0
- Removed thrid-party resources that aren't updated to 0.9 yet.
- Updated CHANGELOG

--- a/bindings_generator/Cargo.toml
+++ b/bindings_generator/Cargo.toml
@@ -4,8 +4,9 @@ authors = ["The godot-rust developers"]
 description = "Generates bindings for the Godot engine's gdnative classes from a json api description file."
 documentation = "https://docs.rs/crate/gdnative_bindings_generator"
 repository = "https://github.com/godot-rust/godot-rust"
+homepage = "https://godot-rust.github.io/"
 license = "MIT"
-version = "0.9.0-preview.0"
+version = "0.9.0"
 workspace = ".."
 edition = "2018"
 
