--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -4,7 +4,8 @@ authors = ["The godot-rust developers"]
 description = "The Godot game engine's gdnative core bindings."
 documentation = "https://docs.rs/crate/gdnative-core"
 repository = "https://github.com/godot-rust/godot-rust"
-version = "0.9.0-preview.0"
+homepage = "https://godot-rust.github.io/"
+version = "0.9.0"
 license = "MIT"
 workspace = ".."
 edition = "2018"
@@ -15,12 +16,12 @@ gd_test = []
 nativescript = ["bitflags", "parking_lot"]
 
 [dependencies]
-gdnative-sys = { path = "../gdnative-sys", version = "0.9.0-preview.0" }
+gdnative-sys = { path = "../gdnative-sys", version = "0.9.0" }
 libc = "0.2"
 approx = "0.3.2"
 euclid = "0.22.1"
 
-gdnative-impl-proc-macros = { path = "../impl/proc_macros", version = "=0.9.0-preview.0" }
+gdnative-impl-proc-macros = { path = "../impl/proc_macros", version = "=0.9.0" }
 
 bitflags = { version = "1.2", optional = true }
 parking_lot = { version = "0.9.0", optional = true }
