--- a/gdnative-derive/Cargo.toml
+++ b/gdnative-derive/Cargo.toml
@@ -4,7 +4,8 @@ authors = ["The godot-rust developers"]
 description = "The Godot game engine's gdnative derive and procedural macros."
 documentation = "https://docs.rs/crate/gdnative-derive"
 repository = "https://github.com/godot-rust/godot-rust"
-version = "0.9.0-preview.0"
+homepage = "https://godot-rust.github.io/"
+version = "0.9.0"
 license = "MIT"
 workspace = ".."
 edition = "2018"
