Made Instance::new use NativeScript::new instead
Unlike `Object::set_script`, this will also work in editors even if the
script isn't registered as a tool script.

Also modified CI to run tests in editor mode as well.

Close #614

--- a/.travis.yml
+++ b/.travis.yml
@@ -153,4 +153,5 @@ script:
       mkdir ./project/lib;
       cp ../target/debug/libgdnative_test.so ./project/lib/;
       "Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" --path ./project/;
+      "Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" -e --path ./project/ --run-editor-tests;
     fi
