Proper fallback in case of TypeId widening
This adds a proper fallback mechanism using `IndexSet` that should cover
all cases where the layout of `TypeId` would not be compatible with that
of `usize`.

A `type_tag_fallback` feature is added so both paths can be tested in CI.

Close #608.

--- a/.travis.yml
+++ b/.travis.yml
@@ -154,4 +154,9 @@ script:
       cp ../target/debug/libgdnative_test.so ./project/lib/;
       "Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" --path ./project/;
       "Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" -e --path ./project/ --run-editor-tests;
+      cargo build --features=type_tag_fallback;
+      mkdir ./project/lib;
+      cp ../target/debug/libgdnative_test.so ./project/lib/;
+      "Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" --path ./project/;
+      "Godot_v${GODOT_VER}-${GODOT_REL}_linux_headless.64" -e --path ./project/ --run-editor-tests;
     fi
