--- a/gdnative/Cargo.toml
+++ b/gdnative/Cargo.toml
@@ -16,6 +16,7 @@ default = ["bindings"]
 formatted = ["gdnative-bindings/formatted", "gdnative-bindings/one_class_one_file"]
 
 gd_test = ["gdnative-core/gd_test"]
+type_tag_fallback = ["gdnative-core/type_tag_fallback"]
 bindings = ["gdnative-bindings"]
 
 [dependencies]
