--- a/bindings_generator/Cargo.toml
+++ b/bindings_generator/Cargo.toml
@@ -20,3 +20,4 @@ proc-macro2 = "1.0.6"
 quote = "1.0.2"
 syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
 miniserde = "=0.1.13"
+unindent = "0.1.7"
