Added native_plugin example to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "examples/signals",
     "examples/dodge_the_creeps",
     "examples/resource",
+    "examples/native_plugin",
     "impl/proc_macros"
 ]
 
