Add networking example
* Adds new client_server project under examples
* The project contains a very simple network communication example using
rpc calls
* Updates root Cargo.toml to add the new project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "examples/dodge_the_creeps",
     "examples/resource",
     "examples/native_plugin",
+    "examples/rpc",
     "impl/proc_macros"
 ]
 
