--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -15,3 +15,4 @@ type_tag_fallback = ["gdnative/type_tag_fallback"]
 [dependencies]
 gdnative = { path = "../gdnative", features = ["gd_test"] }
 gdnative-derive = { path = "../gdnative-derive" }
+approx = "0.3.2"
