Update UI tests
Update tests with the added `glam` dependency. Run tests that depend on
Span::join only on nightly.

--- a/gdnative/Cargo.toml
+++ b/gdnative/Cargo.toml
@@ -26,6 +26,7 @@ gdnative-bindings = { optional = true, path = "../gdnative-bindings", version = 
 
 [dev-dependencies]
 trybuild = "1.0"
+rustversion = "1.0"
 
 [package.metadata.docs.rs]
 all-features = true
