Added class_registry to internally track which classes have been registered and give better error handling related to issue #602.
Includes the feedback from PR#737 as well as the test failures that were found due to lazy initialization of nativescript
Changed error message with the that previously suggested (is the script registered?) now returns a more generic expectation

--- a/gdnative-core/Cargo.toml
+++ b/gdnative-core/Cargo.toml
@@ -23,6 +23,7 @@ approx = "0.4.0"
 glam = "0.14.0"
 indexmap = "1.6.0"
 ahash = "0.7.0"
+once_cell = "1.7.2"
 
 gdnative-impl-proc-macros = { path = "../impl/proc_macros", version = "=0.9.3" }
 
