--- a/bindings_generator/Cargo.toml
+++ b/bindings_generator/Cargo.toml
@@ -14,10 +14,10 @@ edition = "2018"
 debug = []
 
 [dependencies]
-heck = "0.3.0"
-roxmltree = "0.14.0"
-proc-macro2 = "1.0.6"
-quote = "1.0.2"
-syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
-miniserde = "=0.1.13"
+heck = "0.3.3"
+roxmltree = "0.14.1"
+proc-macro2 = "1.0.28"
+quote = "1.0.9"
+syn = { version = "1.0.74", features = ["full", "extra-traits", "visit"] }
+miniserde = "0.1.14"
 unindent = "0.1.7"
