--- a/impl/proc_macros/Cargo.toml
+++ b/impl/proc_macros/Cargo.toml
@@ -13,6 +13,6 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-syn = { version = "1.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
-quote = "1.0"
-proc-macro2 = "^1.0"
+syn = { version = "1.0.74", features = ["full", "extra-traits", "visit", "visit-mut"] }
+quote = "1.0.9"
+proc-macro2 = "1.0.28"
